--- a/great-idea-website/index.html
+++ b/great-idea-website/index.html
@@ -19,12 +19,12 @@
   <header>
     <nav>
       <ul>
-        <li><a href="#">Services</a></li>
-        <li><a href="#">Product</a></li>
-        <li><a href="#">Vision</a></li>
-        <li><a href="#">Features</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="#services">Services</a></li>
+        <li><a href="#product">Product</a></li>
+        <li><a href="#vision">Vision</a></li>
+        <li><a href="#features">Features</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
 
@@ -45,13 +45,13 @@
   <hr>
   <main>
     <div class="container">
-      <div class="box">
+      <div id="features" class="box">
         <h3>Features</h3>
         <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
           Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
       </div>
 
-      <div class="box">
+      <div id="about" class="box">
         <h3>About</h3>
         <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
           Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
@@ -61,19 +61,19 @@
     <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
 
     <div class="container">
-      <div class="box2">
+      <div id="services" class="box2">
         <h3>Services</h3>
         <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
           Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
       </div>
 
-      <div class="box2">
+      <div id="product" class="box2">
         <h3>Product</h3>
         <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
           Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
       </div>
 
-      <div class="box2">
+      <div id="vision" class="box2">
         <h3>Vision</h3>
         <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
           Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
@@ -83,7 +83,7 @@
   <hr>
 
   <section id="cuzSectionWasTaken">
-    <div class="contact">
+    <div id="contact" class="contact">
       <h3>Contact</h3>
       <address>
         <p>123 Way 456 Street
